Fixed: fliter's notification & similar cars on mobile

--- a/car_website/car_website/wwwroot/css/CarDetail.scss
+++ b/car_website/car_website/wwwroot/css/CarDetail.scss
@@ -188,7 +188,9 @@ h4 {
         margin-right: 5px;
     }
 }
-
+#similar-cars-mobile{
+    display: none;
+}
 .car {
     &_description {
         border-top: 2px solid $gray-default;
@@ -209,7 +211,7 @@ h4 {
             background-color: $background-secondary;
             padding: 10px;
             border-radius: 0 16px 0 16px;
-            min-width: 150px;
+            min-width: 215px;
             max-width: 242px;
             box-shadow: 0 0 15px rgba(0,0,0, 0.25);
 
@@ -455,6 +457,13 @@ h4 {
 }
 
 @media (max-width: 767px) {
+    #similar-cars-mobile{
+        display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
     .slider button {
         cursor: none;
         transition: 0.1s;
